--- a/Credit_report.ipynb
+++ b/Credit_report.ipynb
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "165cbd17",
    "metadata": {},
    "outputs": [
@@ -762,7 +762,7 @@
     "\n",
     "def analyze_missing(df, df_name):\n",
     "    \"\"\"Улучшенный анализ пропусков с визуализацией\"\"\"\n",
-    "    print(f\"\\n🔍 Анализ пропусков: {df_name.upper()}\")\n",
+    "    print(f\"\\n Анализ пропусков: {df_name.upper()}\")\n",
     "    print(f\"Всего строк: {len(df):,}\")\n",
     "    \n",
     "    # Создаем отчет\n",
@@ -801,7 +801,7 @@
     "\n",
     "# Дополнительный анализ для orders\n",
     "if 'is_rejected' in orders.columns:\n",
-    "    print(\"\\n📊 Статистика по отклоненным заявкам:\")\n",
+    "    print(\"\\n Статистика по отклоненным заявкам:\")\n",
     "    rejected_stats = orders.groupby('is_rejected').agg({\n",
     "        'corrected_loan_amount': ['count', 'mean', 'sum'],\n",
     "        'issue_date': lambda x: x.isna().sum()\n",
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0a7eb4b1",
    "metadata": {},
    "outputs": [
@@ -1075,7 +1075,7 @@
     "    return df\n",
     "\n",
     "# Применяем обработку ко всем таблицам\n",
-    "print(\"🔧 Начинаем обработку пропусков...\")\n",
+    "print(\"Начинаем обработку пропусков...\")\n",
     "\n",
     "tables = {\n",
     "    'orders': orders if 'orders' in globals() else None,\n",
@@ -1106,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d54a0155",
    "metadata": {},
    "outputs": [
@@ -1138,7 +1138,7 @@
    "source": [
     "def validate_data_logic(df, df_name):\n",
     "    \"\"\"Проверка логической целостности данных\"\"\"\n",
-    "    print(f\"\\n🔎 Валидация данных: {df_name.upper()}\")\n",
+    "    print(f\"\\n Валидация данных: {df_name.upper()}\")\n",
     "    issues_found = False\n",
     "    \n",
     "    # 1. Проверка для таблицы orders\n",
@@ -1149,21 +1149,21 @@
     "            date_logic_ok &= (df['issue_date'] <= df['closed_at']).all()\n",
     "        \n",
     "        if not date_logic_ok:\n",
-    "            print(\"⛔ Ошибка: Нарушена хронология дат (created_at ≤ issue_date ≤ closed_at)\")\n",
+    "            print(\"Ошибка: Нарушена хронология дат (created_at ≤ issue_date ≤ closed_at)\")\n",
     "            issues_found = True\n",
     "        \n",
     "        # Проверка 2: Суммы должны быть положительными\n",
     "        if 'corrected_loan_amount' in df.columns:\n",
     "            negative_sums = (df['corrected_loan_amount'] < 0).sum()\n",
     "            if negative_sums > 0:\n",
-    "                print(f\"⛔ Ошибка: Обнаружено {negative_sums} заявок с отрицательной суммой\")\n",
+    "                print(f\"Ошибка: Обнаружено {negative_sums} заявок с отрицательной суммой\")\n",
     "                issues_found = True\n",
     "        \n",
     "        # Проверка 3: Отклоненные заявки не должны иметь даты выдачи\n",
     "        if 'is_rejected' in df.columns:\n",
     "            rejected_with_dates = df[df['is_rejected'] & df['issue_date'].notna()].shape[0]\n",
     "            if rejected_with_dates > 0:\n",
-    "                print(f\"⛔ Ошибка: {rejected_with_dates} отклоненных заявок с указанной датой выдачи\")\n",
+    "                print(f\"Ошибка: {rejected_with_dates} отклоненных заявок с указанной датой выдачи\")\n",
     "                issues_found = True\n",
     "    \n",
     "    # 2. Проверка для таблицы plan\n",
@@ -1172,7 +1172,7 @@
     "        if 'plan_at' in df.columns and 'created_at' in df.columns:\n",
     "            invalid_dates = df[df['plan_at'] < df['created_at']].shape[0]\n",
     "            if invalid_dates > 0:\n",
-    "                print(f\"⛔ Ошибка: {invalid_dates} записей с plan_at раньше created_at\")\n",
+    "                print(f\"Ошибка: {invalid_dates} записей с plan_at раньше created_at\")\n",
     "                issues_found = True\n",
     "    \n",
     "    # 3. Проверка для таблицы payments\n",
@@ -1183,7 +1183,7 @@
     "                merged = df.merge(orders, on='order_id', how='left')\n",
     "                overpayments = merged[merged['paid_amount'] > merged['corrected_loan_amount']].shape[0]\n",
     "                if overpayments > 0:\n",
-    "                    print(f\"⛔ Ошибка: {overpayments} платежей превышают сумму займа\")\n",
+    "                    print(f\"Ошибка: {overpayments} платежей превышают сумму займа\")\n",
     "                    issues_found = True\n",
     "    \n",
     "    if not issues_found:\n",
